Add api-key input and make fileid general

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,10 @@
 		"file": {
 			"base": "file",
 			"description": "Subject Metadata CSV file."
-		}
+		},
+		"api_key": {
+      			"base": "api-key"
+    		}
 	},
 	"config": {
 		"Group_Tags_By": {
